--- a/src/SASS/App.scss
+++ b/src/SASS/App.scss
@@ -1,5 +1,6 @@
 @import "reset.scss";
 @import "variables.scss";
+@import "success.scss";
 @import "header.scss";
 @import "about.scss";
 @import "contact.scss";
